# openxgauthenticator

./: README.md  convert.bat  convert.sh  openxgauthenticator-cli.code-workspace  openxgauthenticator.code-workspace
openxgauthenticator/: Cargo.toml  compile.sh
openxgauthenticator-cli/: .gitignore  Cargo.toml  compile.sh
openxgauthenticator-cli/src/: main.rs
openxgauthenticator-gui/: Cargo.toml  build.rs
openxgauthenticator-gui/src/: app.rs  config.rs  lib.rs  main.rs  self_update.rs  ua.rs  update_thread.rs
openxgauthenticator/site/: main.py
openxgauthenticator/site/templates/: index.html
openxgauthenticator/src/: main.rs
simulator/: main.py
site/: .gitignore  cf_pages_build.sh  convertor.py  index.html  main.py  most_common_ua.txt  school_ip  update_most_common_ua.py
site/info/: index.html
