[package]
name = "openxgauthenticator-cli"
version = "1.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
confy = "0.4.0"
serde = {version = "1.0", features = ["derive"]}
rpassword = "5.0.1"
ansi_term = "0.12"
libopenxg = "0.1.2"