[package]
name = "openxgauthenticator-gui"
version = "0.1.0"
authors = ["Alex-Programs <alex@alexcj.co.uk"]
edition = "2021"

[dependencies]
libopenxg = "0.1.3"
confy = "0.5.1"
serde = { version = "1.0", features = ["derive"] }
toml = "0.7.3"
reqwest = {version = "0.11", features = ["blocking", "rustls"]}
self_update = { version = "0.36.0", features = ["archive-zip", "rustls", "compression-zip-deflate", "compression-zip-bzip2"]}
dirs = "5.0.0"
catppuccin-egui = "2.0"
once_cell = "1.17.1"

egui = "0.21.0"
eframe = { version = "0.21.0", default-features = false, features = [
    "accesskit",     # Make egui comptaible with screen readers. NOTE: adds a lot of dependencies.
    "default_fonts", # Embed the default egui fonts.
    "glow",          # Use the glow rendering backend. Alternative: "wgpu".
] }


# native:
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tracing-subscriber = "0.3"

# web:
[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1.6"
tracing-wasm = "0.2"
wasm-bindgen-futures = "0.4"


[profile.release]
opt-level = 2 # fast and small wasm

# Optimize all dependencies even in debug builds:
[profile.dev.package."*"]
opt-level = 2


[patch.crates-io]

# If you want to use the bleeding edge version of egui and eframe:
# egui = { git = "https://github.com/emilk/egui", branch = "master" }
# eframe = { git = "https://github.com/emilk/egui", branch = "master" }

# If you fork https://github.com/emilk/egui you can test with:
# egui = { path = "../egui/crates/egui" }
# eframe = { path = "../egui/crates/eframe" }
