[package]
name = "openxgauthenticator-gui"
version = "0.1.3"
authors = ["Alex-Programs <alex@alexcj.co.uk"]
edition = "2021"

[dependencies]
libopenxg = "0.1.3"
confy = "0.5.1"
serde = { version = "1.0", features = ["derive"] }
toml = "0.7.3"
reqwest = {version = "0.11", features = ["blocking", "rustls"]}
self_update_danger_no_ssl_verify = { version = "0.38.0", features = ["archive-zip", "rustls", "compression-zip-deflate", "compression-zip-bzip2"]}
dirs = "5.0.0"
catppuccin-egui = "2.0"
once_cell = "1.17.1"

egui = "0.21.0"
eframe = { version = "0.21.0", default-features = false, features = [
    "default_fonts", # Embed the default egui fonts.
    "glow",          # Use the glow rendering backend. Alternative: "wgpu".
] }

image = {version = "0.24", features = ["png"]}
egui_extras = {version = "0.21.0", features = ["image"]}

[target.'cfg(windows)'.build-dependencies]
winres = "0.1.12"

# native:
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tracing-subscriber = "0.3"

[profile.release]
opt-level = 3 # Higher optimisation
strip = true
lto = "fat"

# Optimize all dependencies even in debug builds:
[profile.dev.package."*"]
opt-level = 2