[package]
name = "openxgauthenticator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
confy = "0.4.0"
serde = {version = "1.0", features = ["derive"]}
reqwest = {version = "0.11.9", features = ["blocking", "default-tls"]}